[CCAP-704] Update provider table and provider importer to support site-administered provider orgs