@@ -4,7 +4,6 @@ import formflow.library.data.Submission;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase.DatabaseProvider;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase.DatabaseType;
-import io.zonky.test.db.postgres.embedded.EmbeddedPostgres;
 import java.math.BigInteger;
 import java.util.List;
 import java.util.Optional;
@@ -15,33 +14,33 @@ import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.data.jpa.repository.config.EnableJpaRepositories;
 import org.springframework.test.context.ActiveProfiles;
+
 @DataJpaTest
 @AutoConfigureEmbeddedDatabase(type = DatabaseType.POSTGRES, provider = DatabaseProvider.ZONKY)
-@EnableJpaRepositories(basePackageClasses = {TransmissionRepository.class, ProviderRepository.class, County.class, ResourceOrganization.class})
+@EnableJpaRepositories(basePackageClasses = {TransmissionRepository.class, ProviderRepository.class, County.class,
+        ResourceOrganization.class})
 @EntityScan(basePackageClasses = {Transmission.class, Submission.class, Provider.class, County.class, ResourceOrganization.class})
 @ActiveProfiles("test")
-public class EmbeddedPostgresIntegrationTest {
-
-    private static EmbeddedPostgres embeddedPostgres;
+public class ProviderAndResourceOrganizationIntegrationTest {
 
     @Autowired
-    private ProviderRepository repository;
+    private ProviderRepository providerRepository;
 
     @Autowired
     private CountyRepository countyRepository;
 
     @Autowired
-    private ResourceOrganizationRepository resourceOrganizationRepository ;
+    private ResourceOrganizationRepository resourceOrganizationRepository;
 
     @Test
     public void testFindProviderById() {
-        BigInteger id = BigInteger.valueOf(43545l);
+        BigInteger id = BigInteger.valueOf(43545);
         Provider provider = new Provider();
         provider.setName("New Provider");
         provider.setProviderId(id);
-        Provider savedPerson = repository.save(provider);
-        Assertions.assertNotNull(savedPerson.getProviderId());
-        Assertions.assertEquals(savedPerson.getProviderId(), provider.getProviderId());
+        Provider savedProvider = providerRepository.save(provider);
+        Assertions.assertNotNull(savedProvider.getProviderId());
+        Assertions.assertEquals(savedProvider.getProviderId(), provider.getProviderId());
     }
 
     @Test
@@ -60,7 +59,7 @@ public class EmbeddedPostgresIntegrationTest {
 
     @Test
     public void testResourceOrganizationById() {
-        BigInteger id = BigInteger.valueOf(43545l);
+        BigInteger id = BigInteger.valueOf(43545);
         String caseloadCode = "TestCode";
         ResourceOrganization organization = new ResourceOrganization();
         organization.setSda(Short.valueOf("3434"));
@@ -71,12 +70,12 @@ public class EmbeddedPostgresIntegrationTest {
 
         List<ResourceOrganization> byIds = resourceOrganizationRepository.findByCaseloadCode(caseloadCode);
         Assertions.assertNotNull(byIds);
-        Assertions.assertEquals(savedOrganization, byIds.get(0));
+        Assertions.assertEquals(savedOrganization, byIds.getFirst());
     }
 
     @Test
     public void testResourceOrganizationByProviderId() {
-        BigInteger id = BigInteger.valueOf(34334l);
+        BigInteger id = BigInteger.valueOf(34334);
         String caseloadCode = "TestCode";
         ResourceOrganization organization = new ResourceOrganization();
         organization.setSda(Short.valueOf("3434"));
@@ -85,12 +84,12 @@ public class EmbeddedPostgresIntegrationTest {
         organization.setName("test name");
         ResourceOrganization savedOrganization = resourceOrganizationRepository.save(organization);
 
-        BigInteger providerId = BigInteger.valueOf(1213l);
+        BigInteger providerId = BigInteger.valueOf(1213);
         Provider provider = new Provider();
         provider.setName("New Provider");
         provider.setProviderId(providerId);
         provider.setResourceOrganization(savedOrganization);
-        repository.save(provider);
+        providerRepository.save(provider);
 
         Optional<ResourceOrganization> byId = resourceOrganizationRepository.findByProvidersProviderId(providerId);
         ResourceOrganization resourceOrganization = byId.get();
